--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Typescript node web application boilerplate",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/bin/www",
+    "start": "npm run build && node ./dist/bin/www",
     "build": "tsc",
     "lint": "tslint src/**/*",
     "test": "jest && npm run lint"
@@ -24,44 +24,17 @@
   "author": "javilobo8@github.com",
   "license": "ISC",
   "dependencies": {
-    "bluebird": "^3.5.3",
+    "bluebird": "^3.5.4",
     "express": "^4.16.4",
-    "typescript": "^3.1.6"
+    "mongoose": "^5.5.4",
+    "typescript": "^3.4.5"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.24",
     "@types/express": "^4.16.0",
-    "@types/jest": "^24.0.11",
+    "@types/mongoose": "^5.3.27",
     "@types/supertest": "^2.0.6",
-    "jest": "^24.5.0",
-    "supertest": "^4.0.0",
-    "ts-jest": "^24.0.0",
-    "tslint": "^5.11.0"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "verbose": true,
-    "setupFilesAfterEnv": [
-      "<rootDir>/test/bootstrap-jest.js"
-    ],
-    "transform": {
-      ".(ts|tsx)": "ts-jest"
-    },
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "src/**/*.{ts|js}",
-      "!src/bin/*.{ts|js}"
-    ],
-    "coverageReporters": [
-      "json",
-      "lcov",
-      "clover"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "js",
-      "json"
-    ],
-    "preset": "ts-jest/presets/js-with-ts"
+    "supertest": "^4.0.2",
+    "tslint": "^5.16.0"
   }
 }
