--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run build && node ./dist/bin/www",
     "build": "tsc",
     "lint": "tslint src/**/*",
-    "test": "jest && npm run lint"
+    "test": "mocha -r ts-node/register test/**/*.test.ts && npm run lint"
   },
   "keywords": [
     "typescript",
@@ -31,10 +31,16 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.24",
+    "@types/chai": "^4.1.7",
     "@types/express": "^4.16.0",
+    "@types/mocha": "^5.2.6",
     "@types/mongoose": "^5.3.27",
-    "@types/supertest": "^2.0.6",
+    "@types/supertest": "^2.0.7",
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
+    "mongodb-memory-server": "^5.1.0",
     "supertest": "^4.0.2",
+    "ts-node": "^8.1.0",
     "tslint": "^5.16.0"
   }
 }
